name:                pandoc-wrapper
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-wrapper
  main-is:             pandoc-wrapper
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , yaml
                     , text
                     , shelly
                     , bytestring
